--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 
 
-Copie contenu de env.template vers ton fichier .env
+Copie contenu de .env.template vers ton fichier .env
 
 NPM INSTALL & NPM START..
 
